--- a/index.html
+++ b/index.html
@@ -22,6 +22,16 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <title>Team Enginuity</title>
     <meta name='description' content="Team Enginuity is Warwick High School's Robotics Team in Newport News, Virginia" />
+    <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-47687035-1', 'warwickhsrobotics.github.io');
+    ga('send', 'pageview');
+
+    </script>
 </head>
 
 <body>
