--- a/ftc.html
+++ b/ftc.html
@@ -23,7 +23,7 @@
     <p>2013-14 Game: <strong>Block Party</strong></p>
     <table class="gameinfo center">
         <tr>
-            <td class="gamelogo"><img src="./assets/first/ftc2014.png"></td>
+            <td class="gamelogo"><img alt="FTC Block Party logo" src="./assets/first/ftc2014.png"></td>
             <td class="gamevideo"><iframe width="400" height="225" src="http://www.youtube.com/embed/UPAATO-NpcM" frameborder="0" allowfullscreen></iframe></td>
         </tr>
     </table>
