--- a/links.html
+++ b/links.html
@@ -18,8 +18,35 @@
     </script>
 </head>
 
-<body>
+<body id="links">
     <h1>Useful Links</h1>
-    <p>Under Construction</p>
+
+    <h2>Resources</h2>
+    <p class="linkdesc">Places with general knowledge about FIRST, FTC, or FRC topics.</p>
+        <p><a target="_blank" href="http://www.usfirst.org/">
+            FIRST</a></p>
+        <p><a target="_blank" href="http://www.virginiafirst.org">
+            Virginia FIRST (contains material related to FIRST events in the state of Virginia)</a></p>
+        <p><a target="_blank" href="http://www.thebluealliance.com">
+            The Blue Alliance (contains statistics on every FRC team)</a></p>
+
+    <h2>Message Boards / Forums</h2>
+    <p class="linkdesc">Places to discuss, ask questions and reach the broader public with issues concerning FTC or FRC.</p>
+        <p><a target="_blank" href="http://www.chiefdelphi.com/forums/index.php">
+            Chief Delphi</a></p>
+        <p><a target="_blank" href="http://www.chiefdelphi.com/forums/forumdisplay.php?f=146">
+            Chief Delphi (FTC sub-forum)</a></p>
+        <p><a target="_blank" href="http://www.reddit.com/r/FRC">
+            /r/FRC on Reddit</a></p>
+        <p><a target="_blank" href="http://www.reddit.com/r/FTC">
+            /r/FTC on Reddit</a></p>
+
+    <h2>Nearby Teams</h2>
+        <p class="linkdesc">If you would like your team featured here and you are in the Hampton Roads area, please send an email to <strong>warwickhsrobotics [at] gmail [dot] com.</strong></p>
+        <p><a target="_blank" href="http://www.triplehelixrobotics.org/index.html">
+            Triple Helix (FRC 2363)</a></p>
+        <p><a target="_blank" href="http://www.team122.org/">
+            The NASA Knights (FRC 122)</a></p>
+
 </body>
 </html>
