--- a/sponsors.html
+++ b/sponsors.html
@@ -23,9 +23,12 @@
     <p>Team Enginuity would like to thank the following organizations and individuals for their contributions. These contributions help fund expenditures such as registration fees, travel expenses, extra parts, marketing costs, and more.</p>
     <div id="sp-logos" class="center">
         <h2>Organizations</h2>
-        <a href="http://sbo.nn.k12.va.us" target="_blank"><img src="./assets/spon/nnps.png"></a>
-        <a href="http://robotics.nasa.gov" target="_blank"><img src="./assets/spon/nasa.png"></a>
-        <a href="http://goodglass.com/" target="_blank"><img src="./assets/spon/goodmansglass.png"></a>
+        <a href="http://sbo.nn.k12.va.us" target="_blank"><img alt="Newport News Public Schools" src="./assets/spon/nnps.png"></a>
+        <a href="http://robotics.nasa.gov" target="_blank"><img alt="NASA" src="./assets/spon/nasa.png"></a>
+        <a href="http://www.rockwellcollins.com/" target="_blank"><img alt="Rockwell Collins" src="./assets/spon/rockwell.png"></a>
+        <a href="http://goodglass.com/" target="_blank"><img alt="Goodman Glass" src="./assets/spon/goodmansglass.png"></a>
+        <a href="http://www.patrickshardware.com" target="_blank"><img alt="Patrick's Hardware" src="./assets/spon/patricks-logo.png"></a>
+        PMA Inc.
     </div>
     <div id="sp-people" class="center">
         <h2>Individuals</h2>
