--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
      INSPIRED BY TRIPLE HELIX - FRC 2363 (www.triplehelixrobotics.org)
 
      CODED BY HAND IN BRACKETS
-     VERSION 0.3.5 - 30 JAN 2014            -->
-    
-<!-- NOTHING YOU SEE IS FINAL;
-     BUT AT THIS POINT IT PROBABLY WILL BE  -->
+     VERSION 0.4 - 31 JAN 2014            -->
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -39,14 +36,14 @@
         <! -- HEADER BEGINS HERE -->
         <div id="header">
             <div id="header-logo">
-                <a href="./index.html"><img src=./assets/hf/headerlogo.png></a>
+                <a href="./index.html"><img alt="Team Logo" src=./assets/hf/headerlogo.png></a>
             </div>
             <div id="header-text">
                 <h1 title="Pronounced en·gi·new·i·ty">Team Enginuity</h1>
                 <h2><strong>FTC #5969 | FRC #4538</strong></h2>
             </div>
             <div id="header-firstlogo">
-                <a href="http://www.usfirst.org" target="_blank" title="Link to FIRST"><img src=./assets/hf/firstlogo.png /></a>        
+                <a href="http://www.usfirst.org" target="_blank" title="Link to FIRST"><img alt="FIRST logo" src=./assets/hf/firstlogo.png /></a>
             </div>
         </div>
         <! -- HEADER ENDS HERE -->
@@ -82,8 +79,8 @@
         <div id="footer">
             <div id="footer-top">
 	            <div id="footer-leagues" class="center">
-	                <p><a target="_blank" title="FRC Information" href="http://usfirst.org/frc"><img src="./assets/hf/frc1.png"></a></p>
-	                <p><a target="_blank" title="FTC Information" href="http://usfirst.org/ftc"><img src="./assets/hf/ftc1.png"></a></p>
+	                <p><a target="_blank" title="FRC Information" href="http://usfirst.org/frc"><img alt="FRC logo" src="./assets/hf/frc1.png"></a></p>
+	                <p><a target="_blank" title="FTC Information" href="http://usfirst.org/ftc"><img alt="FTC logo" src="./assets/hf/ftc1.png"></a></p>
 	            </div>
 	            <div id="footer-whs">
 	                <p><a href="http://warwick.nn.k12.va.us">Warwick High School</a><br>
@@ -93,14 +90,14 @@
 	                (757) 591-4700
 	            </div>
 	            <div id="footer-socialmedia">
-	                <p><a target="_blank" title="Like Us on Facebook" href="http://www.facebook.com/USERNAME"><img src="./assets/hf/facebook.png"></a></p>
-	                <p><a target="_blank" title="Follow Us on Twitter" href="http://www.twitter.com/EnginuityWHS"><img src="./assets/hf/twitter.png"></a></p>
-	                <p><a target="_blank" title="Follow Us on Instagram" href="http://www.instagram.com/EnginuityWHS"><img src="./assets/hf/ig.png"></a></p>
+	                <p><a target="_blank" title="Like Us on Facebook" href="https://www.facebook.com/pages/Team-Enginuity-Warwick-High-School-Robotics-Team/574751449237559"><img alt="Facebook logo" src="./assets/hf/facebook.png"></a></p>
+	                <p><a target="_blank" title="Follow Us on Twitter" href="http://www.twitter.com/EnginuityWHS"><img alt="Twitter logo" src="./assets/hf/twitter.png"></a></p>
+	                <p><a target="_blank" title="Follow Us on Instagram" href="http://www.instagram.com/EnginuityWHS"><img alt="Instagram Logo" src="./assets/hf/ig.png"></a></p>
 	            </div>
             </div>
             <div id="footer-bottom">
                 <div id="footer-bottom-info">
-            	   <p>Hosted with Github Pages | View Source Code | Made from scratch using <a target="_blank" href="http://brackets.io">Brackets</a> | Site looks best on <a target="_blank" href="http://www.mozilla.com/firefox">Firefox</a> or <a target="_blank" href="http://www.google.com/chrome">Chrome</a></p>
+            	   <p>Hosted with <a target="_blank" href="http://pages.github.com/">Github Pages</a> | <a target="_blank" href="https://github.com/warwickhsrobotics/warwickhsrobotics.github.io">View Source Code</a> | Made from scratch using <a target="_blank" href="http://brackets.io">Brackets</a> | Site looks best on <a target="_blank" href="http://www.mozilla.com/firefox">Firefox</a> or <a target="_blank" href="http://www.google.com/chrome">Chrome</a></p>
                 </div>
             </div>
         </div>
