Fixed FTC and FRC links

--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
                 <p><a target="cstage" href="./sponsors.html">Sponsors</a></p>
                 <p><a target="cstage" href="./contact.html">Contact Us</a></p>
                 <p><a target="cstage" href="./first.html">About <em>FIRST</em></a></p>
-                <p><a target="cstage" href="./FTC.html">FTC</a></p>
-                <p><a target="cstage" href="./FRC.html">FRC</a></p>
+                <p><a target="cstage" href="./ftc.html">FTC</a></p>
+                <p><a target="cstage" href="./frc.html">FRC</a></p>
                 <p><a target="cstage" href="./media.html">Media</a></p>
                 <p><a target="cstage" href="./events.html">Events</a></p>
                 <p><a target="cstage" href="./links.html">Useful Links</a></p>
