Fixed team and sponsors lists

--- a/team.html
+++ b/team.html
@@ -34,8 +34,10 @@
         <tr>
             <td>Coaches + Mentors</td>
             <td><h3>Coach: Karen Bazemore</h3>
-                <p>Chris</p>
-                <p>John Stork</p>
+                <p>C. Garrity (College Student and FIRST alum)</p>
+                <p>J. Stork (NNPS)</p>
+                <p>M. Johnson (US Navy and FIRST alum)</p>
+                <p>E. Leeks (Huntington Ingalls)</p>
             </td>
         </tr>
         <tr>
@@ -48,9 +50,9 @@
                 <p>Christian M. (2015)</p>
                 <p>Taj F. (2016)</p>
                 <p>Quintin L. (2016)</p>
-                <p>Justin (2016)</p>
-                <p>Joe (2017)</p>
-                <p>Daniel (2017)</p>
+                <p>Justin G. (2016)</p>
+                <p>Joe B.(2017)</p>
+                <p>Daniel B. (2017)</p>
             </td>
         </tr>
         <tr>
@@ -58,7 +60,7 @@
             <td><h3>Captain: Quintin L. (2016)</h3>
                 <p>Lawrence P. (2015)</p>
                 <p>Ernest N. (2016)</p>
-                <p>Daniel (2017)</p>
+                <p>Daniel B. (2017)</p>
             </td>
         </tr>
         <tr>
