--- a/team.html
+++ b/team.html
@@ -4,7 +4,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <link href='http://fonts.googleapis.com/css?family=Raleway:500|Open+Sans:700|Droid+Sans:400,700' rel='stylesheet' type='text/css'>
-    <link type='text/css' rel='stylesheet' href='./css/universal.min.css' />
+    <link type='text/css' rel='stylesheet' href='./css/universal.css' />
     <title>Team Roster | Team Enginuity</title>
     <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -20,7 +20,7 @@
 
 <body>
     <h1>Team Roster</h1>
-    <table id="au-table" border=0>
+    <table id="team-table" border=0>
         <colgroup>
             <col span="1">
             <col span="1">
@@ -31,7 +31,7 @@
                 <td><h2>Members</h2></td>
             </tr>
         </thead>
-        <tr>
+        <tr class="normalp">
             <td>Coaches + Mentors</td>
             <td><h3>Coach: Karen Bazemore</h3>
                 <p>C. Garrity (College Student and FIRST alum)</p>
@@ -40,39 +40,47 @@
                 <p>E. Leeks (Huntington Ingalls)</p>
             </td>
         </tr>
-        <tr>
-            <td>Safety Captain</td>
-            <td><h3>Las S. (2016)</h3></td>
+        <tr class="normalp">
+            <td>Captains</td>
+            <td><h3>Co-Team Captains: Christian M. (2015) & Sahaj B. (2015)</h3>
+                <p>Safety Captain: Las S. (2016)</p></td>
         </tr>
             <td>Mechanical</td>
-            <td><h3>Co-Captains: Ernest N. (2016) & Adam P. (2016)</h3>
+            <td><h3>Co-Leads: Ernest N. (2016) & Adam P. (2016)</h3>
+                <p>Courtney S. (2014)</p>
                 <p>Sahaj B. (2015)</p>
                 <p>Christian M. (2015)</p>
+                <p>Dani C. (2016)</p>
                 <p>Taj F. (2016)</p>
                 <p>Quintin L. (2016)</p>
                 <p>Justin G. (2016)</p>
-                <p>Joe B.(2017)</p>
+                <p>Joanne S. (2016)</p>
+                <p>Joe B. (2017)</p>
                 <p>Daniel B. (2017)</p>
             </td>
         </tr>
         <tr>
             <td>Electrical</td>
-            <td><h3>Captain: Quintin L. (2016)</h3>
+            <td><h3>Lead: Quintin L. (2016)</h3>
                 <p>Lawrence P. (2015)</p>
+                <p>Sarah F. (2016)</p>
                 <p>Ernest N. (2016)</p>
+                <p>Joanne S. (2016)</p>
                 <p>Daniel B. (2017)</p>
+                <p>Valencia R. (2017)</p>
             </td>
         </tr>
         <tr>
             <td>Programming</td>
-            <td><h3>Captain: Sahaj B. (2015)</h3>
+            <td><h3>Lead: Sahaj B. (2015)</h3>
                 <p>Lawrence P. (2015)</p>
                 <p>Rakshith R. (2015)</p>
+                <p>Sarah F. (2016)</p>
             </td>
         </tr>
         <tr>
             <td>Strategy</td>
-            <td><h3>Captain: Christian M. (2015)</h3>
+            <td><h3>Lead: Christian M. (2015)</h3>
                 <p>Sahaj B. (2015)</p>
                 <p>Lawrence P. (2015)</p>
                 <p>Rakshith R. (2015)</p>
@@ -82,7 +90,7 @@
         </tr>
         <tr>
             <td>Design</td>
-            <td><h3>Captain: Christian M. (2015)</h3>
+            <td><h3>Lead: Christian M. (2015)</h3>
                 <p>Sahaj B. (2015)</p>
                 <p>Rakshith R. (2015)</p>
                 <p>Ernest N. (2016)</p>
@@ -90,20 +98,12 @@
         </tr>
         <tr>
             <td>Website / Social Media</td>
-            <td><h3>Captain: Jonathan L. (2016)</h3>
-                <p>Jeff B. (2014)</p>
-            </td>
+            <td><h3>Lead: Jonathan L. (2016)</h3></td>
         </tr>
         <tr>
             <td>Marketing</td>
-            <td><h3>Captain: Las S. (2016)</h3>
+            <td><h3>Lead: Las S. (2016)</h3>
                 <p>Jonathan L. (2016)</p>
-            </td>
-        </tr>
-        <tr>
-            <td>CAD</td>
-            <td><h3>Captain: Bobby L. (2014)</h3>
-                <p>Jeff B. (2014)</p>
             </td>
         </tr>
     </table>
