--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <p><a target="cstage" href="./team.html">Team</a></p>
             <p><a target="cstage" href="./sponsors.html">Sponsors</a></p>
             <p><a target="cstage" href="./contact.html">Contact</a></p>
-            <p><a target="cstage" href="./first.html">About FIRST</a></p>
+            <p><a target="cstage" href="./first.html"><em>FIRST</em></a></p>
             <p><a target="cstage" href="./ftc.html">FTC</a></p>
             <p><a target="cstage" href="./frc.html">FRC</a></p>
             <p><a target="cstage" href="./media.html">Media</a></p>
@@ -62,8 +62,8 @@
         <div id="footer">
             <div id="footer-top">
                 <div id="footer-leagues" class="center">
-                    <p><a target="_blank" title="FRC Information" href="http://usfirst.org/frc"><img alt="FRC logo" src="./assets/hf/frc1.png"></a></p>
-                    <p><a target="_blank" title="FTC Information" href="http://usfirst.org/ftc"><img alt="FTC logo" src="./assets/hf/ftc1.png"></a></p>
+                    <p><a target="_blank" title="FRC Information" href="http://usfirst.org/frc"><img alt="FRC logo" src="./assets/hf/frc.png"></a></p>
+                    <p><a target="_blank" title="FTC Information" href="http://usfirst.org/ftc"><img alt="FTC logo" src="./assets/hf/ftc.png"></a></p>
                 </div>
                 <div id="footer-whs">
                     <p><a href="http://warwick.nn.k12.va.us">Warwick High School</a><br>
@@ -82,7 +82,7 @@
     </div>
 <!--
     KEEPS NAVBAR BELOW HEADER, BUT STICKS TO THE TOP
-    ADD TOTAL PADDING (TOP AND BOTTOM) TO H
+    ADD TOTAL PADDING (TOP AND BOTTOM) TO 'h'
 -->
     <script>
         $(window).scroll(function(){
