Cleaned up footer, made site HiDPI friendly
updated first and index text

consolidated footer text to new page

--- a/index.html
+++ b/index.html
@@ -78,6 +78,11 @@
                     <p><a target="_blank" title="Follow Us on Instagram" href="http://www.instagram.com/EnginuityWHS"><img alt="Instagram Logo" src="./assets/hf/ig.png"></a></p>
                 </div>
             </div>
+            <div id="footer-bottom">
+                <div id="footer-bottom-info">
+                    <p><a target="cstage" href="./aboutpg.html">Technical Information</a> | Site looks best on <a target="_blank" href="http://www.mozilla.com/firefox">Firefox</a> or <a target="_blank" href="http://www.google.com/chrome">Chrome</a></p>
+                </div>
+            </div>
         </div>
     </div>
 <!--
