--- a/ftc.html
+++ b/ftc.html
@@ -4,18 +4,8 @@
 <head>
     <link href='http://fonts.googleapis.com/css?family=Oswald|Raleway:500|Open+Sans:700|Droid+Sans:400,700' rel='stylesheet' type='text/css'>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <link type='text/css' rel='stylesheet' href='./css/universal.css' />
+    <link type='text/css' rel='stylesheet' href='./css/universal.min.css' />
     <title>FTC | Team Enginuity</title>
-    <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-    ga('create', 'UA-47687035-1', 'warwickhsrobotics.github.io');
-    ga('send', 'pageview');
-
-    </script>
 </head>
 
 <body>
@@ -49,5 +39,15 @@
             <p>At the start of a match, blocks are located in the two corners at the front and back of the playing field and are distributed evenly with approximately 48 per corner at the start of the match. Each robot starts with one block which teams can pre-load onto their robot. Robots may not possess or control more than four blocks at any time. Each Alliance starts with their robots touching the outer field perimeter wall on their side of the playing field.Matches have two distinct periods of play: a 30-second Autonomous period followed by a two-minute Driver-Controlled period, which includes a 30-second End Game.</p>
         </div>
     </div>
+    <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-47687035-1', 'warwickhsrobotics.github.io');
+    ga('send', 'pageview');
+
+    </script>
 </body>
 </html>
