--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <!--CSS-->
     <link href='http://fonts.googleapis.com/css?family=Oswald|Raleway:500|Open+Sans:400,700|Droid+Sans:400,700' rel='stylesheet' type='text/css'>
-    <link href="./css/universal.css" rel="stylesheet" type="text/css">
-    <link href="./css/index.css" rel="stylesheet" type="text/css">
+    <link href="./css/universal.min.css" rel="stylesheet" type="text/css">
+    <link href="./css/index.min.css" rel="stylesheet" type="text/css">
 <!--jQUERY-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <!--OTHER-->
@@ -23,17 +23,6 @@
     <link rel="icon" href="./favicon.ico" type="image/x-icon">
     <title>Team Enginuity</title>
     <meta name='description' content="Second-Year FTC and FRC Team with lots of potential from Newport News, Virginia">
-<!--GOOGLE ANALYTICS-->
-    <script>
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-        ga('create', 'UA-47687035-1', 'warwickhsrobotics.github.io');
-        ga('send', 'pageview');
-
-    </script>
 </head>
 
 <body>
@@ -109,5 +98,16 @@
             else
                 $('#navbar').css('top',0);
             });
+    </script>
+    <!--GOOGLE ANALYTICS-->
+    <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+        ga('create', 'UA-47687035-1', 'warwickhsrobotics.github.io');
+        ga('send', 'pageview');
+
     </script>
 </body>
