--- a/aboutpg.html
+++ b/aboutpg.html
@@ -4,8 +4,16 @@
 <head>
     <link href='http://fonts.googleapis.com/css?family=Oswald|Raleway:500|Open+Sans:700|Droid+Sans:400,700' rel='stylesheet' type='text/css'>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <link type='text/css' rel='stylesheet' href='./css/universal.css' />
+    <link type='text/css' rel='stylesheet' href='./css/universal.min.css' />
     <title>Technical Information | Team Enginuity</title>
+</head>
+
+<body>
+    <h1>Technical Information</h1>
+    <h2>About The Site</h2>
+    <p>This website was created from scratch in the free, open-source <a target="_blank" href="http://brackets.io">Brackets</a> HTML editor. Brackets is developed in HTML, CSS and JavaScript, making anyone who uses the editor also capable of tweaking the editor by writing extensions.</p>
+    <p>We are using <a target="_blank" href="http://pages.github.com">GitHub Pages</a> to host the site. GitHub Pages was chosen because it is free, fast, reliable and simple.</p> <p>In the spirit of <a target="_blank" href="http://www.usfirst.org/aboutus/gracious-professionalism">Coopertition</a> you can also view and download all of the source code <a target="_blank" href="https://github.com/warwickhsrobotics/warwickhsrobotics.github.io">HERE.</a></p>
+    <p style="font-size: 0.8em;">Psst... If you are an FRC team, you can request a free GitHub organization account <a target="_blank" href="http://education.github.com">HERE.</a> Git is revision control software -- it can be used for groups to work on code together easily.</p>
     <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -16,13 +24,5 @@
     ga('send', 'pageview');
 
     </script>
-</head>
-
-<body>
-    <h1>Technical Information</h1>
-    <h2>About The Site</h2>
-    <p>This website was created from scratch in the free, open-source <a target="_blank" href="http://brackets.io">Brackets</a> HTML editor. Brackets is developed in HTML, CSS and JavaScript, making anyone who uses the editor also capable of tweaking the editor by writing extensions.</p>
-    <p>We are using <a target="_blank" href="http://pages.github.com">GitHub Pages</a> to host the site. GitHub Pages was chosen because it is free, fast, reliable and simple.</p> <p>In the spirit of <a target="_blank" href="http://www.usfirst.org/aboutus/gracious-professionalism">Coopertition</a> you can also view and download all of the source code <a target="_blank" href="https://github.com/warwickhsrobotics/warwickhsrobotics.github.io">HERE.</a></p>
-    <p style="font-size: 0.8em;">Psst... If you are an FRC team, you can request a free GitHub organization account <a target="_blank" href="http://education.github.com">HERE.</a> Git is revision control software -- it can be used for groups to work on code together easily.</p>
 </body>
 </html>
