--- a/contact.html
+++ b/contact.html
@@ -4,8 +4,17 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <link href='http://fonts.googleapis.com/css?family=Oswald|Raleway:500|Open+Sans:700|Droid+Sans:400,700' rel='stylesheet' type='text/css'>
-    <link type='text/css' rel='stylesheet' href='./css/universal.css' />
+    <link type='text/css' rel='stylesheet' href='./css/universal.min.css' />
     <title>Contact Us | Team Enginuity</title>
+</head>
+
+<body>
+    <h1>Contact Us</h1>
+    <p>Use the following contact information to make any inquiries regarding <em>Team Enginuity.</em></p>
+    <p>Inquiries by Phone</p>
+    <h2>(757) 591-4700</h2>
+    <p>Inquiries by Email</p>
+    <h2>warwickhsrobotics [at] gmail [dot] com</h2>
     <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -16,14 +25,5 @@
     ga('send', 'pageview');
 
     </script>
-</head>
-
-<body>
-    <h1>Contact Us</h1>
-    <p>Use the following contact information to make any inquiries regarding <em>Team Enginuity.</em></p>
-    <p>Inquiries by Phone</p>
-    <h2>(757) 591-4700</h2>
-    <p>Inquiries by Email</p>
-    <h2>warwickhsrobotics [at] gmail [dot] com</h2>
 </body>
 </html>
