--- a/first.html
+++ b/first.html
@@ -4,18 +4,8 @@
 <head>
     <link href='http://fonts.googleapis.com/css?family=Oswald|Raleway:500|Open+Sans:700|Droid+Sans:400,700' rel='stylesheet' type='text/css'>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <link type='text/css' rel='stylesheet' href='./css/universal.css' />
+    <link type='text/css' rel='stylesheet' href='./css/universal.min.css' />
     <title>About FIRST | Team Enginuity</title>
-    <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-    ga('create', 'UA-47687035-1', 'warwickhsrobotics.github.io');
-    ga('send', 'pageview');
-
-    </script>
 </head>
 
 <body>
@@ -33,5 +23,15 @@
     <p>Gracious Professionalism is one of the core values at <em>FIRST.</em> It's all about encouraging innovation and competition. It encourages teams to fiercely compete against one another in a <strong>friendly</strong> manner; At the end of the day no one is a loser; no one is put down -- everyone's accomplishments are equally recognized and celebrated.</p>
     <h2>Coopertition</h2>
     <p>Coopertition (a cross between the words Cooperation and Competition) is another core value at <em>FIRST.</em> It encourages teams to collaborate between each other despite the fact that they are competing between each other. It means that if a team at the pit needs something as small as an allen wrench or as large as a laptop, and you have one, you let them borrow it.</p>
+    <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-47687035-1', 'warwickhsrobotics.github.io');
+    ga('send', 'pageview');
+
+    </script>
 </body>
 </html>
