Return of the white background

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
      DESIGN BY JONATHAN LACSON
 
      CODED BY HAND IN BRACKETS
-     VERSION 0.5e - 2 FEB 2014
+     VERSION 0.5.1 - 6 FEB 2014
 -->
 
 <head>
@@ -44,7 +44,7 @@
             <p><a target="cstage" href="./team.html">Team</a></p>
             <p><a target="cstage" href="./sponsors.html">Sponsors</a></p>
             <p><a target="cstage" href="./contact.html">Contact</a></p>
-            <p><a target="cstage" href="./first.html"><em>FIRST</em></a></p>
+            <p><a target="cstage" href="./first.html">FIRST</a></p>
             <p><a target="cstage" href="./ftc.html">FTC</a></p>
             <p><a target="cstage" href="./frc.html">FRC</a></p>
             <p><a target="cstage" href="./media.html">Media</a></p>
