--- a/media.html
+++ b/media.html
@@ -20,6 +20,9 @@
 
 <body>
     <h1>Media</h1>
-    <p>Under Construction</p>
+    <div id="media-ftc" class="center">
+        <h2>FTC</h2>
+        <object width="400" height="300"> <param name="flashvars" value="offsite=true&lang=en-us&page_show_url=%2Fphotos%2F117049898%40N08%2Fsets%2F72157640738246603%2Fshow%2F&page_show_back_url=%2Fphotos%2F117049898%40N08%2Fsets%2F72157640738246603%2F&set_id=72157640738246603&jump_to="></param> <param name="movie" value="http://www.flickr.com/apps/slideshow/show.swf?v=140556"></param> <param name="allowFullScreen" value="true"></param><embed type="application/x-shockwave-flash" src="http://www.flickr.com/apps/slideshow/show.swf?v=140556" allowFullScreen="true" flashvars="offsite=true&lang=en-us&page_show_url=%2Fphotos%2F117049898%40N08%2Fsets%2F72157640738246603%2Fshow%2F&page_show_back_url=%2Fphotos%2F117049898%40N08%2Fsets%2F72157640738246603%2F&set_id=72157640738246603&jump_to=" width="400" height="300"></embed></object>
+    </div>
 </body>
 </html>
