--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
 
 <body>
     <h1>Welcome!</h1>
-    <div id="teamphoto-box" class="center">Team photo goes here</div>
+    <img class="teamphoto" alt="Team Photo" src="./assets/home/teampic_small.jpg">
     <p class="center" style="font-size: 0.75em;"><strong>Team photo, taken whenever</strong></p>
     <p>This is the official site of Team Enginuity. We are Warwick High School's Robotics Team in Newport News, Virginia. This year (the 2013-2014 school year) is our second. We are glad that you have decided to take the time to come check out our website! Whether you are part of a veteran FIRST team, a rookie team or not part of a team, our site contains lots of useful information. Here, you can find current information about the 2013 FTC Game, <strong>Block Party</strong>; and the 2014 FRC Game, <strong>Aerial Ascent</strong>; along with further information about our team and our sponsors, media from previous competitons, and resources for other teams.</p>
 </body>
