--- a/sponsors.html
+++ b/sponsors.html
@@ -4,7 +4,7 @@
 <head>
     <link href='http://fonts.googleapis.com/css?family=Oswald|Raleway:500|Open+Sans:700|Droid+Sans:400,700' rel='stylesheet' type='text/css'>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <link type='text/css' rel='stylesheet' href='./css/universal.min.css' />
+<!--    <link type='text/css' rel='stylesheet' href='./css/universal.min.css' />-->
     <title>Sponsors | Team Enginuity</title>
 </head>
 
