--- a/sponsors.html
+++ b/sponsors.html
@@ -4,7 +4,7 @@
 <head>
     <link href='http://fonts.googleapis.com/css?family=Oswald|Raleway:500|Open+Sans:700|Droid+Sans:400,700' rel='stylesheet' type='text/css'>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<!--    <link type='text/css' rel='stylesheet' href='./css/universal.min.css' />-->
+    <link type='text/css' rel='stylesheet' href='./css/universal.min.css' />
     <title>Sponsors | Team Enginuity</title>
 </head>
 
@@ -21,6 +21,26 @@
         <h2>Individuals</h2>
         <p>Christian May</p>
     </div>
+    <script>
+        window.parent.addEventListener('message', function (e) {
+        var eventName = e.data[0],
+        var data      = e.data[1];
+
+        switch (eventName) {
+            case 'referrer': injectBaseElement(data); break;
+            ...
+        }
+
+        }, false);
+    </script>
+    <script>
+        function resize() {
+            var height = $(html).height();
+            
+            // Backwards – send message to parent
+            window.parent.postMessage(['setHeight', height], '*');
+        }
+    </script>
     <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
