--- a/aboutpg.html
+++ b/aboutpg.html
@@ -15,6 +15,26 @@
     <p>We are using <a target="_blank" href="http://pages.github.com">GitHub Pages</a> to host the site. GitHub Pages was chosen because it is free, fast, reliable and simple.</p> <p>In the spirit of <a target="_blank" href="http://www.usfirst.org/aboutus/gracious-professionalism">Coopertition</a> you can also view and download all of the source code <a target="_blank" href="https://github.com/warwickhsrobotics/warwickhsrobotics.github.io">HERE.</a></p>
     <p style="font-size: 0.8em;">Psst... If you are an FRC team, you can request a free GitHub organization account <a target="_blank" href="http://education.github.com">HERE.</a> Git is revision control software -- it can be used for groups to work on code together easily.</p>
     <script>
+        window.parent.addEventListener('message', function (e) {
+        var eventName = e.data[0],
+        var data      = e.data[1];
+
+        switch (eventName) {
+            case 'referrer': injectBaseElement(data); break;
+            ...
+        }
+
+        }, false);
+    </script>
+    <script>
+        function resize() {
+            var height = $(html).height();
+            
+            // Backwards – send message to parent
+            window.parent.postMessage(['setHeight', height], '*');
+        }
+    </script>
+    <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
     m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
