--- a/contact.html
+++ b/contact.html
@@ -16,6 +16,26 @@
     <p>Inquiries by Email</p>
     <h2>warwickhsrobotics [at] gmail [dot] com</h2>
     <script>
+        window.parent.addEventListener('message', function (e) {
+        var eventName = e.data[0],
+        var data      = e.data[1];
+
+        switch (eventName) {
+            case 'referrer': injectBaseElement(data); break;
+            ...
+        }
+
+        }, false);
+    </script>
+    <script>
+        function resize() {
+            var height = $(html).height();
+            
+            // Backwards – send message to parent
+            window.parent.postMessage(['setHeight', height], '*');
+        }
+    </script>
+    <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
     m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
