--- a/first.html
+++ b/first.html
@@ -24,6 +24,26 @@
     <h2>Coopertition</h2>
     <p>Coopertition (a cross between the words Cooperation and Competition) is another core value at <em>FIRST.</em> It encourages teams to collaborate between each other despite the fact that they are competing between each other. It means that if a team at the pit needs something as small as an allen wrench or as large as a laptop, and you have one, you let them borrow it.</p>
     <script>
+        window.parent.addEventListener('message', function (e) {
+        var eventName = e.data[0],
+        var data      = e.data[1];
+
+        switch (eventName) {
+            case 'referrer': injectBaseElement(data); break;
+            ...
+        }
+
+        }, false);
+    </script>
+    <script>
+        function resize() {
+            var height = $(html).height();
+            
+            // Backwards – send message to parent
+            window.parent.postMessage(['setHeight', height], '*');
+        }
+    </script>
+    <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
     m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
