--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <p><a target="cstage" href="./links.html">Links</a></p>
         </div>
         <div id="main">
-            <iframe name="cstage" src="home.html" width="100%" height="1210px" id="main-content-iframe" frameborder="0">If you're seeing this message, it means IFrames are not supported; Please enable IFrames or upgrade to a compatible browser that supports IFrames.</iframe>
+            <iframe name="cstage" src="home.html" width="100%" height="800px" id="main-content-iframe" frameborder="0">If you're seeing this message, it means IFrames are not supported; Please enable IFrames or upgrade to a compatible browser that supports IFrames.</iframe>
             <script>
                 $( "iframe" ).on('load',function() {
                     document.title = document.getElementById("main-content-iframe").contentDocument.title;
@@ -85,6 +85,33 @@
             </div>
         </div>
     </div>
+<!--
+    ESOTERIC HTML AND JS
+    USED TO MELD IFRAME AND PARENT
+    SEE: http://benvinegar.github.io/seamless-talk/
+-->
+    <script>
+        var iframe = document.getElementById('cstage');
+
+        iframe.contentWindow.postMessage(
+            ['referrer', window.location.href], '*'
+        );
+    </script>
+    <script>
+        window.addEventListener('message', function (e) {
+            var $iframe = $('#cstage');
+
+            var eventName = e.data[0];
+            var data      = e.data[1];
+
+            switch (eventName) {
+                case 'setHeight':
+                    $iframe.height(data);
+                    break;
+                    ...
+            }
+        }, false);
+    </script>
 <!--
     KEEPS NAVBAR BELOW HEADER, BUT STICKS TO THE TOP
     ADD TOTAL PADDING (TOP AND BOTTOM) TO 'h'
