--- a/frc.html
+++ b/frc.html
@@ -58,6 +58,7 @@ Title: FRC Page
                     <p>For the rest of the match, drivers remotely control robots from behind a protective wall. Once all balls in autonomous are scored, only one ball is re-entered in to play, and the Alliances must cycle a single ball as many times as possible for the remainder of the match. With the single ball, they try to maximize their points earned by throwing balls over the truss, catching balls launched over the truss, and scoring in the high and low goals on the far side of the field.</p>
                     <p>Alliances receive large bonuses for “assists,” which are earned for each robot that has possession of the ball in a zone as the ball moves down the field.</p>
                 </div>
+            </div>
         </div>
         <div id="footer">
             {% include footer.html %}
