--- a/frc.html
+++ b/frc.html
@@ -64,32 +64,6 @@ Title: FRC Page
             {% include footer.html %}
         </div>
     </div>
-<!--
-    KEEPS NAVBAR BELOW HEADER, BUT STICKS TO THE TOP
-    ADD TOTAL PADDING (TOP AND BOTTOM) TO 'h'
--->
-    <script>
-        $(window).scroll(function(){
-            var s=$(this).scrollTop(),
-                h=$('#header').height();
-            if(s<h)
-                $('#navbar').css('top',(h+10)-s);
-            else
-                $('#navbar').css('top',0);
-            });
-    </script>
-<!--
-    GOOGLE ANALYTICS
--->
-    <script>
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-        ga('create', 'UA-47687035-1', 'warwickhsrobotics.github.io');
-        ga('send', 'pageview');
-
-    </script>
+    {% include scripts.html %}
 </body>
 </html>
