Updated contact page

--- a/contact.html
+++ b/contact.html
@@ -29,11 +29,18 @@ Title: Contact Us Page
         </div>
         <div id="main">
             <h1>Contact Us</h1>
-            <p>Use the following contact information to make any inquiries regarding <em>Team Enginuity.</em></p>
-            <p>Inquiries by Phone</p>
-            <h2>(757) 591-4700</h2>
-            <p>Inquiries by Email</p>
-            <h2>warwickhsrobotics [at] gmail [dot] com</h2>
+                <p>Use the following contact information to make any inquiries regarding Team Enginuity.</p>
+            <h2>Inquiries by Phone</h2>
+                <h3>(757) 591-4700</h3>
+            <h2>Inquiries by Email</h2>
+                <p>Team Coach: Karen Bazemore</p>
+                    <h3>kbazemore@mail.teamenginuity.org</h3>
+                <p>Marketing-related (sponsorships, etc.)</p>
+                    <h3>marketing@mail.teamenginuity.org</h3>
+                <p>Webmaster: Jonathan L.</p>
+                    <h3>webmaster@mail.teamenginuity.org</h3>
+                <p>Other General Inquiries</p>
+                    <h3>inquiries@mail.teamenginuity.org</h3>
         </div>
         <div id="footer">
             {% include footer.html %}
